# wayfire

./: .clang-format  .gitignore  .gitmodules  README.md  flake.nix  justfile  meson.build  meson_options.txt  wayfire.ini
ipc-scripts/: cfg.py  headless.py  inactive-alpha.py  ipc-bindings.py  (+4 more)
plugins/: meson.build
plugins/animate/: animate.cpp  animate.hpp  basic_animations.hpp  meson.build  spin.hpp  squeezimize.hpp  zap.hpp
plugins/animate/fire/: fire.cpp  fire.hpp
plugins/blur/: blur.cpp
plugins/common/: meson.build  workspace-wall.cpp
plugins/common/wayfire/plugins/common/: input-grab.hpp  move-drag-interface.hpp  preview-indication.hpp  simple-text-node.hpp  util.hpp  workspace-wall.hpp
plugins/cube/: cube.cpp
plugins/decor/: deco-layout.cpp  deco-subsurface.cpp  deco-theme.cpp  decoration.cpp
plugins/grid/: grid.cpp
plugins/grid/wayfire/plugins/: crossfade.hpp
plugins/ipc/: demo-ipc.cpp  ipc-activator.hpp  ipc-helpers.hpp  ipc-method-repository.hpp  ipc.cpp  ipc.hpp  meson.build  stipc.cpp
plugins/ipc-rules/: ipc-events.hpp  ipc-input-methods.hpp  ipc-rules-common.hpp  ipc-rules.cpp  ipc-utility-methods.hpp  meson.build
plugins/protocols/: foreign-toplevel.cpp  input-method-v1.cpp  meson.build  session-lock.cpp  shortcuts-inhibit.cpp  wayfire-shell.cpp
plugins/scale/: meson.build  scale-title-overlay.cpp  scale.cpp
plugins/single_plugins/: alpha.cpp  command.cpp  expo.cpp  idle.cpp  ipc-rules.cpp  meson.build  move.cpp  oswitch.cpp  overview-switcher.cpp  qwf-overview.cpp  resize.cpp  switcher.cpp  vswipe.cpp  wrot.cpp  wsets.cpp  xkb-bindings.cpp  zoom.cpp
plugins/tile/: meson.build  tile-dragging.hpp  tile-ipc.hpp  tile-plugin.cpp  tile-wset.hpp  tree-controller.cpp  tree-controller.hpp  tree.cpp  tree.hpp
plugins/vswitch/: meson.build  vswitch.cpp
plugins/vswitch/wayfire/plugins/: vswitch.hpp
plugins/window-rules/: view-action-interface.cpp  view-action-interface.hpp
plugins/wm-actions/: wm-actions.cpp
plugins/wobbly/: meson.build  wobbly.c  wobbly.cpp
plugins/wobbly/wayfire/plugins/wobbly/: wobbly-signal.hpp
(+97 files in other folders)
